booking routes with swagger completed
